--- a/force-app/main/default/classes/UniversalFeatureToggle.cls
+++ b/force-app/main/default/classes/UniversalFeatureToggle.cls
@@ -47,6 +47,11 @@ public class UniversalFeatureToggle {
     }
 
 
+    public Integer fmaValue() {
+        return fmaValue;
+    }
+
+
     // PRIVATE
 
     private void persist() {
@@ -69,8 +74,27 @@ public class UniversalFeatureToggle {
         UNUSED_8, // Add User Story Autoname for details
         UNUSED_9, // Add User Story Autoname for details
         UNUSED_10, // Add User Story Autoname for details
+        UNUSED_11, // Add User Story Autoname for details
+        UNUSED_12, // Add User Story Autoname for details
+        UNUSED_13, // Add User Story Autoname for details
+        UNUSED_14, // Add User Story Autoname for details
+        UNUSED_15, // Add User Story Autoname for details
+        UNUSED_16, // Add User Story Autoname for details
+        UNUSED_17, // Add User Story Autoname for details
+        UNUSED_18, // Add User Story Autoname for details
+        UNUSED_19, // Add User Story Autoname for details
+        UNUSED_20, // Add User Story Autoname for details
+        UNUSED_21, // Add User Story Autoname for details
+        UNUSED_22, // Add User Story Autoname for details
+        UNUSED_23, // Add User Story Autoname for details
+        UNUSED_24, // Add User Story Autoname for details
+        UNUSED_25, // Add User Story Autoname for details
+        UNUSED_26, // Add User Story Autoname for details
+        UNUSED_27, // Add User Story Autoname for details
+        UNUSED_28, // Add User Story Autoname for details
         //.. MAXIMUM 30 VALUES (Positive 32bit Integer)
         UNUSED_29, // Add User Story Autoname for details
-        UNUSED_30 // Add User Story Autoname for details
+        UNUSED_30, // Add User Story Autoname for details
+        UNUSED_31 // Add User Story Autoname for details
     }
 }
