Finally could push all

--- a/force-app/main/default/classes/AccountsSelector.cls
+++ b/force-app/main/default/classes/AccountsSelector.cls
@@ -19,7 +19,7 @@ public without sharing class AccountsSelector extends fflib_SObjectSelector {
     }
 
 
-    public List<Account> byIds(Set<Id> ids) {
+    public List<Account> byId(Set<Id> ids) {
         return (List<Account>) Database.query( newQueryFactory()
                                                     .setCondition('Id IN :ids')
                                                     .toSOQL());
