--- a/force-app/main/default/classes/Accounts.cls
+++ b/force-app/main/default/classes/Accounts.cls
@@ -8,6 +8,13 @@ public with sharing class Accounts extends fflib_SObjectDomain {
 
     // PUBLIC
     
+    public void wrong_Name() {
+        System.debug('Here');
+        for(Integer i=0; i<2; i++) {
+         Account a = [SELECT Id FROM Account];
+        }
+    }
+
     public override void onBeforeUpdate(Map<Id, SObject> old) {
         new ActivateAccounts(records).execute();
     }
